2004-09-22  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/planner-config.el:
	(planner-publishing-directory): don't trash my public_html

	* dotgnus.el:
	(gnus-add-configuration): info buffers

	* dotemacs.el:
	(set-scroll-margin): do not scroll in *Calendar*

	* dotemacs-cust.el:
	(custom-set-variables): do not hl-line in *Calendar*

2004-09-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/planner-config.el:
	new binding for editing the task description

	* dotemacs.el
	(color-eldoc): use it for better eldoc help

	* dotemacs-cust.el:
	(custom-set-variables): don't popup me

	* perso/color-eldoc.el:
	initial checkin

	* dotgnus.el:
	(bbdb/send-hook): use it

2004-09-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/planner-config.el:
	new function to reuse same window if possible

	* dotemacs.el:
	(read-file-name-completion-ignore-case): set to t
	longlines definitely sucks

	* dotemacs-cust.el:
	(custom-set-faces): unify latex faces with default ones

2004-09-16  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	more window configuration
	launch calendar and planner at startup
	more reftex stuff

	* dotemacs.el
	(planner-config): re-enabled

	* perso/emacs-wiki-config.el:
	update to latest sacahc's version

	* perso/planner-config.el:
	update to latest sacahc's version

	* perso/remember-config.el:
	initial checkin

2004-09-15  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	don't use newsrc
	(gnus-add-configuration): try this config

	* dotemacs.el:
	(make-main-frame): make the current frame the main one
	(chmod-file): remove useless function (see executable-chmod)

	* dotgnus.el:
	(server-start): start server automatically when using gnus

2004-09-14  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(kill-read-only-ok): don't beep when "killing" in read-only
	(tramp): use the correct package

2004-09-10  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(longlines): re-enabled with refill-mode

	* perso/patches.el: