@@ -257,5 +257,36 @@ select the completion near point.\n\n")))))
 ;;   (unless (minibuffer-window-active-p (minibuffer-window))
 ;;     ad-do-it))
 
+;; Author: Patrick Gundlach
+;; nice mark - shows mark as a highlighted 'cursor' so user 'always'
+;; sees where the mark is. Especially nice for killing a region.
+
+(defvar pg-mark-overlay nil
+  "Overlay to show the position where the mark is")
+(make-variable-buffer-local 'pg-mark-overlay)
+
+(put 'pg-mark-mark 'face 'secondary-selection)
+
+(defvar pg-mark-old-position nil
+  "The position the mark was at. To be able to compare with the
+current position")
+
+(defun pg-show-mark ()
+  "Display an overlay where the mark is at. Should be hooked into
+activate-mark-hook"
+  (unless pg-mark-overlay
+    (setq pg-mark-overlay (make-overlay 0 0))
+    (overlay-put pg-mark-overlay 'category 'pg-mark-mark))
+  (let ((here (mark t)))
+    (when here
+      (move-overlay pg-mark-overlay here (1+ here)))))
+
+(defadvice  exchange-point-and-mark (after pg-mark-exchange-point-and-mark)
+  "Show visual marker"
+  (pg-show-mark))
+
+(ad-activate 'exchange-point-and-mark)
+(add-hook 'activate-mark-hook 'pg-show-mark)
+
 (provide 'patches)
 ;;; patches.el ends here
